--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,3 +36,11 @@ h1, h2, h3, h4, h5, h6 {
 #theDefender {
 	color: #fff;
 }
+
+#fightDescription1 {
+	color: #fff;
+}
+
+#fightDescription2 {
+	color: #fff;
+}
